# final-project-codingteam

./: .gitignore  README.md  pyproject.toml
examples/: main.py
src/: airfoil_data.py  geometry.py  solver.py
src/bem/: __init__.py  airfoil_data.py  geometry.py  operation.py  solver.py
tests/: operation_test.py  solver_test.py  test_airfoil_data.py  test_geometry.py  test_operation.py  test_solver.py
