[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bem"
version = "0.1.0"
description = "Blade Element Momentum (BEM) wind turbine model"
authors = [
    { name = "Your Name", email = "your@email.com" }
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "scipy"
]

[tool.hatch.build.targets.wheel]
packages = ["src/bem"]
